samples/_failures_safe/1761457191_ddbdcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_008a5e00.c: In function ‘main’:
./samples/SAFE/__tmp_008a5e00.c:153:13: error: expected expression at end of input
  153 |             for (size_t i = 0;
      |             ^~~
./samples/SAFE/__tmp_008a5e00.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_008a5e00.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_008a5e00.c:153:13: error: expected declaration or statement at end of input
